Fixed icon spacing in Dropdownbutton when using LinkButton as entries

--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -519,7 +519,7 @@ nav.navbar-pf {
       display: block;
       padding: 0 1px;
       a {
-        display: block;
+        display: inline-flex;
         border: 0px;
         color: $link-color;
         padding: 2px 20px;
